--- a/src/main.css
+++ b/src/main.css
@@ -1,147 +1,129 @@
-*, *:before, *:after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 body {
-  background: #F5F5F5;
-  color: #444;
-  font-family: "Helvetica Neue", Arial, serif;
-  font-size: 22px;
-  margin: 0;
-  padding: 0;
-  font-weight: 200;
-  -webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    background-color: #1b181c;
+    margin: 0;
+    padding: 0;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
-h1, h2, h3, h4 {
-  margin: 10px 0 15px;
+h1, h2, h3 {
+    margin: 15px 0;
 }
+
+h1, h2 {
+    color: #ebebeb;
+    font-weight: 100;
+}
+
+h1 {
+    font-size: 85px;
+}
+
+h2{
+    font-size: 40px;
+}
+
+h3, nav li {
+    font-size: 28px;
+}
+
+p, li {
+    font-size: 20px;
+}
+
+p, h2 {
+    font-family: 'Source Serif Pro', serif;
+}
+
+
+
 
 .nav, nav {
   display: inline;
   list-style: none;
-  margin: 1em 0;
-  padding: 0;
+  margin: 0 0 2% 0;
+  padding: 0 0;
 }
+
 .nav li, nav li {
   display: inline;
   margin-right: 1em;
 }
 
-p, ul {
-  margin: 10px 0;
-}
-
-.skills ul li {
-  margin-left: 30px;;
-}
-
 a {
-  color: #00b8d4;
-  font-weight: 600;
-  text-decoration: none;
-  border-bottom: 3px solid #00b8d4;
-  padding: 3px;
+    font-weight: 500;
+    text-decoration: none;
+    color: #6c0ae8;
 }
+
 
 a:hover {
-  background-color: #00b8d4;
-  color: white;
+    color: #6c0ae8;
+    border-bottom: 2px solid #6c0ae8;
 }
 
-a:active {
-  position: relative;
-  top: 1px;
-}
-
-a.active {
-  border-bottom: none;
+a:visited {
+    color: #6c0ae8;
 }
 
 .content-wrapper {
-  line-height: 1.4;
-  margin: 0 auto;
-  max-width: 900px;
-  padding: 30px 25px;
+    margin: 0 auto;
+    max-width: 900px;
+    padding: 30px 25px;
 }
 
-/*
- * HEADER
- */
-
-.header, header {
-  align-items: center;
-  background-color: #EFEFEF;
-  background-image: url('bg.jpg');
-  background-position: cover;
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  border-top: 4px solid #e91e63;
-  color: #FFFFFF;
-  display: flex;
-  flex-direction: column;
-  height: 40vh;
-  justify-content: center;
-  min-height: 250px;
-  padding: 0 20px;
-  position: relative;
-  text-align: center;
+header {
+    align-items: center;
+    background-image: url("assets/header-bg.png");
+    background-position: cover;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    border-top: 4px solid #ebebeb;
+    display: flex;
+    flex-direction: column;
+    height: 418px;
+    justify-content: center;
+    position: relative;
+    text-align: center;
+    
 }
 
-@media only screen and (max-device-width: 420px)  {
-  .header, header {
-    background-size: auto 100%;
-  }
+
+.tagline, .about, .contact {
+    background-color: #ebebeb;
+    padding: 2% 6%;
+    color: #272128;
 }
 
-.header:before, header:before {
-  background: rgba(0, 0, 0, .7);
-  bottom: 0;
-  content: ' ';
-  display: block;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 1;
+.skills, .testskills {
+    background-color: #531047;
+    padding: 2% 6%;
+    color: #ebebeb;
+
 }
 
-.header *, header * {
-  position: relative;
-  z-index: 2;
-  text-shadow: 1px 1px 10px black;
+.skills li, .testskills li {
+    margin-left: 15px;
 }
 
-.header h1, header h1 {
-  font-size: 4rem;
-  font-weight: 100;
+footer {
+    background-color: #1b181c;
+    padding: .5% 6%;
+    color: #ebebeb;
 }
 
-.header h2, header h2 {
-  font-size: 2.1rem;
-  font-weight: 100;
-  margin: 5px 0;
+nav a {
+    color: #ebebeb; 
 }
 
-/*
- * SKILLS
- */
-
-.skills {
-  background: #e91e63;
-  color: white;
+nav a.active {
+    border-bottom: 3px solid #ebebeb;
 }
 
-.footer, footer {
-  margin-top: 2em;
-  background-color: #444;
-  color: #eee;
+nav a:hover {
+    color: #ebebeb;
+    border-bottom: 3px solid #6c0ae8;
 }
-.footer h1, footer h1 {
-  font-size: 16px;
+
+nav a:visited {
+    color: #ebebeb;
 }
-.footer p, footer p {
-  font-size: 14px;
